--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -94,7 +94,7 @@ a {
   top: 16px;
   left: 15px;
   font-size: 13px;
-  z-index: 100000;
+  z-index: 10;
 }
 
 .wy-nav-top a {
@@ -116,6 +116,11 @@ a {
 
 .wy-side-nav-search {
   background: #efefef !important;
+  padding-top: 30px;
+}
+
+.wy-side-nav-search > div.version {
+  color: black;
 }
 
 .wy-menu-vertical a {
@@ -144,6 +149,7 @@ a {
   top: 0;
   text-align: center;
   display: none;
+  z-index: 5;
 }
 
 #header-logo {
@@ -176,6 +182,10 @@ a {
   .wy-nav-content-wrap.shift {
     left: 340px;
     top: 75px;
+  }
+
+  .wy-nav-content-wrap {
+    z-index: 10;
   }
 
   .inseq_header {
@@ -233,11 +243,6 @@ a.copybtn {
   width: 100%
 }
 
-/* The research field on top of the toc tree */
-.wy-side-nav-search{
-  padding-top: 0;
-}
-
 /* The section headers in the toc tree */
 .wy-menu-vertical p.caption{
   background-color: #4d59ff;
@@ -251,12 +256,12 @@ a.copybtn {
 
 /* When a list item that does belong to the selected block from the toc tree is hovered */
 .wy-menu-vertical li.current a:hover{
-  background-color: #6f7079;
+  background-color: #9d9eaf;
 }
 
 /* When a list item that does NOT belong to the selected block from the toc tree is hovered. */
 .wy-menu-vertical li a:hover{
-  background-color: #696a75;
+  background-color: #9d9eaf;
 }
 
 /* The color inside the selected toc tree block */
