:memo: Added documentation for FeatureAttribution class

--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -28,28 +28,28 @@ a {
 
 @font-face {
   font-family: HKGroteskPro;
-  font-weight: 400;
+  font-weight: 300;
   src: url(hk-grotesk-pro/HKGroteskPro-Regular.woff2) format("woff2"),
     url(hk-grotesk-pro/HKGroteskPro-Regular.woff) format("woff");
 }
 
 @font-face {
   font-family: HKGroteskPro;
-  font-weight: 600;
+  font-weight: 500;
   src: url(hk-grotesk-pro/HKGroteskPro-Medium.woff2) format("woff2"),
     url(hk-grotesk-pro/HKGroteskPro-Medium.woff) format("woff");
 }
 
 @font-face {
   font-family: HKGroteskPro;
-  font-weight: 700;
+  font-weight: 600;
   src: url(hk-grotesk-pro/HKGroteskPro-SemiBold.woff2) format("woff2"),
     url(hk-grotesk-pro/HKGroteskPro-SemiBold.woff) format("woff");
 }
 
 @font-face {
   font-family: HKGroteskPro;
-  font-weight: 800;
+  font-weight: 700;
   src: url(hk-grotesk-pro/HKGroteskPro-Bold.woff2) format("woff2"),
     url(hk-grotesk-pro/HKGroteskPro-Bold.woff) format("woff");
 }
@@ -107,11 +107,6 @@ a {
 
 .wy-nav-content {
   color: #222222;
-  background: #efefef;
-}
-
-.wy-nav-content-wrap {
-  background: #efefef;
 }
 
 .wy-side-nav-search {
@@ -128,7 +123,7 @@ a {
 }
 
 .wy-menu-vertical a:hover {
-  color: #333333;
+  color: #666666;
   background: #00bfa5;
 }
 
@@ -168,6 +163,11 @@ a {
   width: 100%;
   margin-bottom: 0;
 }
+
+.wy-nav-content-wrap {
+  margin-left: 340px;
+}
+
 
 @media only screen and (max-width: 768px) {
   .wy-nav-side {
@@ -232,12 +232,6 @@ a.copybtn {
   margin: 3px;
 }
 
-/* To keep the logo centered */
-.wy-side-scroll {
-  width: auto;
-  font-size: 20px;
-}
-
 /* The div that holds the logo */
 .HuggingFaceDiv {
   width: 100%
@@ -245,8 +239,8 @@ a.copybtn {
 
 /* The section headers in the toc tree */
 .wy-menu-vertical p.caption{
-  background-color: #4d59ff;
   line-height: 40px;
+  padding-bottom: 40px;
 }
 
 /* The selected items in the toc tree */
@@ -267,11 +261,7 @@ a.copybtn {
 /* The color inside the selected toc tree block */
 .wy-menu-vertical li.toctree-l2 a, .wy-menu-vertical li.toctree-l3 a, .wy-menu-vertical li.toctree-l4 a {
   color: black;
-}
-
-/* Inside code snippets */
-.rst-content dl:not(.docutils) dt{
-  font-size: 15px;
+  text-align: right;
 }
 
 /* Content bars */
@@ -280,9 +270,9 @@ a.copybtn {
   border-right: solid 2px #FB8D68;
   border-left: solid 2px #FB8D68;
   color: #FB8D68;
-  font-family: Calibre-Light, sans-serif;
   border-top: none;
   font-style: normal !important;
+  padding-right: 0.8rem;
 }
 
 /* Expand button */
